--- a/package.json
+++ b/package.json
@@ -9,9 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@apollo/client": "^3.7.15",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.3",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.134",
+    "@mui/material": "^5.13.5",
+    "@mui/styles": "^5.13.2",
+    "apollo-link-context": "^1.0.20",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "firebase": "^9.22.2",
+    "formik": "^2.4.2",
+    "graphql": "^15.8.0",
+    "json2mq": "^0.2.0",
+    "lodash": "^4.17.21",
+    "next": "^13.4.6",
+    "postcss": "^8.4.24",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
+    "tailwindcss": "^3.3.2",
+    "universal-cookie": "^4.0.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "8.43.0",
